--- a/hansl.html
+++ b/hansl.html
@@ -219,7 +219,7 @@
           <div class="panel-body">
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
               <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
+                <div class="panel-heading" role="tab" id="pkopf">
                   <h4 class="panel-title">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" id="meineheads">
                       Do you have gift certificates?
@@ -233,7 +233,7 @@
                 </div>
               </div>
               <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingTwo">
+                <div class="panel-heading" role="tab" id="pkopf">
                   <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" id="meineheads">
                       Can I bring my pet along?
@@ -247,7 +247,7 @@
                 </div>
               </div>
               <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingThree">
+                <div class="panel-heading" role="tab" id="pkopf">
                   <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" id="meineheads">
                       What awards did you receive so far?
@@ -265,13 +265,14 @@
         </div>
       </div>
     </div>
+
     <!--Ja, ich weiß, hätte die panels lieber einzeln machen sollen, statt alle in einem
     aber ich mag jetzt nicht auch noch mit 2 Klassen arbeiten oder für jedes ding eine eigene id machen,
     hab sowieso einige Stunden Horror gehabt, weil ein div gefhlt hat und dadurch nichts funktioniert hat,
     bis ich da draufgekommen bin, hatte ich kopfweh-->
     <br>
 
-  <!--Contact-->
+<!--Contact-->
     <div id="schluss">
       <div id="ah">
         <p class="us">Contact</p>
@@ -289,9 +290,7 @@
         <p><a href="#services">Our services</a></p>
         <p><a href="#appointment">Make an appointment</a></p>
         <p><a href="#faq">FAQ</a></p>
-        <p><button type="button" id="letzte" data-toggle="modal" data-target="#myModal">
-          About us
-        </button></p>
+        <p><a data-toggle="modal" data-target="#myModal">About us</a></p>
       </div>
     </div>
 
